--- a/QAApp/www/views/QueueView.html
+++ b/QAApp/www/views/QueueView.html
@@ -1,47 +1,71 @@
 <!DOCTYPE html>
-<html style="height: 100%">
+<html style="width:100%">
 	<head>
 		<title>Title</title>
-		<link rel="stylesheet" type="text/css" href="../www/Buttons.css">
-		<script type="text/javascript" src="../www/QueueViewModel.js"></script>
-		<script>
-			function loadPageData() {
-				//document.alert("inside javascript setup");
-				var viewModel = new QueueViewModel();
-				viewModel.display();
-			}
-		</script>
+		<link rel="stylesheet" type="text/css" href="../Buttons.css">
+		<script type="text/javascript" src="../QueueViewModel.js"></script>
 	</head>
-	<body onload="loadPageData()" style="height: 100%; width: 100%">
-		<table id="queueView" style="height: 100%; width: 100%; background: white">
-			<tr style="height: 25%">
-			</tr>
-			<tr style="height: 5%">
-				<td style="width: 20%"></td>
-				<td style="width: 60%"><p id="numQuestions" class="queueText">num</p></td>
-				<td style="width: 20%"></td>
-			</tr>
-			<tr style="height: 5%">
-				<td></td>
-				<td><p id="oldestQuestion" class="queueText">oldest</p></td>
-				<td></td>
-			</tr>
-			<tr style="height: 5%">
-				<td></td>
-				<td><p id="waitTime" class="queueText">wait</p></td>
-				<td></td>
-			</tr>
-			<tr style="height: 60%">
-				<td></td>
-				<td style="text-align: center"><button id="assign" class="button bigrounded blue" onclick="assignQuestion()">Assign Me A Question</button></td>
-				<td></td>
-			</tr>
-		</table>
-		<style type="text/css">
-			p.queueText {
+	<body onload="loadPageData()" style="width: 100%">
+		<div id="queueView">
+			<!--<p>Unassigned Questions</p>
+			<table>
+				<tr>
+					<th colspan="3">KJV</th>
+				</tr>
+				<tr>
+					<th style="width:33%">Unanswered Questions</th>
+					<th style="width:33%">Oldest Question</th>
+					<th style="width:33%">Waiting Minutes</th>
+				</tr>
+				<tr>
+					<td>23</td>
+					<td>Sept 23, 2015 13:23</td>
+					<td>234</td>
+				</tr>
+				<tr>
+					<td colspan="3"><button id="assignKJV" class="button bigrounded blue" onclick="assignQuestion()">Assign Me A Question</button></td>
+				</tr>
+			</table>-->
+		</div>
+		<style>
+			table {
+				width: 80%;
+				background: white;
+				margin: 30px auto;
+			}
+			th {
+				border: solid;
+				font-family: sans-serif;
+				font-size: medium;
+				color: grey;
+				color: #6D929B;
+				border-right: 1px solid #C1DAD7;
+				border-bottom: 1px solid #C1DAD7;
+				border-top: 1px solid #C1DAD7;
+				letter-spacing: 2px;
+				text-transform: uppercase;
+				text-align: center;
+				padding: 6px 6px 6px 12px;
+				background: #CAE8EA
+			}
+			td {
+				border: solid;
+				border-right: 1px solid #C1DAD7;
+				border-bottom: 1px solid #C1DAD7;
+				background: #ffffff;
+				padding: 6px 6px 6px 12px;
+				color: #6D929B;
 				font-family: sans-serif;
 				font-size: large;
-				color: grey;
+				text-align: center;
+			}
+			p {
+				font-family: sans-serif;
+				text-transform: uppercase;
+				letter-spacing: 2px;
+				font-size: x-large;
+				color: #6D929B;
+				text-align: center;
 			}
 		</style>
 	</body>
