--- a/QAApp/www/views/QueueView.html
+++ b/QAApp/www/views/QueueView.html
@@ -7,33 +7,33 @@
 	</head>
 	<body onload="loadPageData()" style="width: 100%">
 		<div id="queueView">
-			<!--<p>Unassigned Questions</p>
-			<table>
-				<tr>
-					<th colspan="3">KJV</th>
+			<!-- <p class="queue">Unassigned Questions</p>
+			<table class="queue">
+				<tr class="queue">
+					<th class="queue" colspan="3">KJV</th>
 				</tr>
-				<tr>
-					<th style="width:33%">Unanswered Questions</th>
-					<th style="width:33%">Oldest Question</th>
-					<th style="width:33%">Waiting Minutes</th>
+				<tr class="queue">
+					<th class="queue" style="width:33%">Unanswered Questions</th>
+					<th class="queue" style="width:33%">Oldest Question</th>
+					<th class="queue" style="width:33%">Waiting Minutes</th>
 				</tr>
-				<tr>
-					<td>23</td>
-					<td>Sept 23, 2015 13:23</td>
-					<td>234</td>
+				<tr class="queue">
+					<td class="queue">23</td>
+					<td class="queue">Sept 23, 2015 13:23</td>
+					<td class="queue">234</td>
 				</tr>
-				<tr>
-					<td colspan="3"><button id="assignKJV" class="button bigrounded blue" onclick="assignQuestion()">Assign Me A Question</button></td>
+				<tr class="queue">
+					<td class="queue" colspan="3"><button id="assignKJV" class="button bigrounded blue" onclick="assignQuestion()">Assign Me A Question</button></td>
 				</tr>
-			</table>-->
+			</table> -->
 		</div>
 		<style>
-			table {
+			table.queue {
 				width: 80%;
 				background: white;
 				margin: 30px auto;
 			}
-			th {
+			th.queue {
 				border: solid;
 				font-family: sans-serif;
 				font-size: medium;
@@ -48,7 +48,7 @@
 				padding: 6px 6px 6px 12px;
 				background: #CAE8EA
 			}
-			td {
+			td.queue {
 				border: solid;
 				border-right: 1px solid #C1DAD7;
 				border-bottom: 1px solid #C1DAD7;
@@ -59,7 +59,7 @@
 				font-size: large;
 				text-align: center;
 			}
-			p {
+			p.queue {
 				font-family: sans-serif;
 				text-transform: uppercase;
 				letter-spacing: 2px;
