--- a/QAApp/www/views/RolesView.html
+++ b/QAApp/www/views/RolesView.html
@@ -2,17 +2,9 @@
 <html style="height:100%">
 <head>
 	<title>Roles View</title>
+	<meta charset="UTF-8">
 </head>
-<style>
-	table {
-		border: solid;
-		margin: 0px auto;
-	}
-	th {
-		border: solid;
-	}
-</style>
-<body style="height:100%">
+<body style="height:100%" onload="loadPageData()">
 	<div id="rolesView" style="width:100%; height:100%; margin:0; padding:0; border:solid; background: radial-gradient(at top right, rgba(255, 255, 0, 0.8), #006bff, rgba(3, 47, 167, 0.83), #009970, #148000)">
 		<h1 class="role">Manage Roles</h1>
 		<table id="rolesView" class="role">
@@ -21,25 +13,25 @@
 				<th class="role" colspan="5">Role</th>
 			</tr>
 			<tr class="role">
-				<th class="role">&nbsp;</th>
+				<th id="it1" class="role" style="font-size: 1.7rem; padding:6px;"></th>
 				<th class="role">Fullname</th>
 				<th class="role">Pseudonym</th>
 				<th class="role">Position</th>
 				<th class="role">Version</th>
 				<th class="role">Started</th>
 				<th class="role">Count</th>
-				<th class="role">&nbsp;</th>
+				<th id="it2" class="role" style="font-size:1.7rem; padding:6px;"></th>
 			</tr>
 			<tbody id="rolesBody" class="role">
 				<tr class="role">
-					<td class="role">&nbsp;</td>
+					<td class="role"><input type="checkbox" onclick="personEdit()"></td>
 					<td class="role">Bob Smith</td>
 					<td class="role">Bob</td>
 					<td class="role">Teacher</td>
-					<td class="role">KVJ</td>
+					<td class="role">KJV</td>
 					<td class="role">3/3/2013</td>
 					<td class="role">20</td>
-					<td class="role">&nbsp;</td>
+					<td class="role"><input type="checkbox" onclick="roleEdit()"</td>
 				</tr>
 			</tbody>
 		</table>
@@ -87,5 +79,14 @@
 		text-align: center;
 	}
 	</style>
+	<script>
+		function loadPageData() {
+			var pencil = String.fromCharCode('0x270E');
+			var node1 = document.getElementById('it1');
+			node1.textContent = pencil;
+			var node2 = document.getElementById('it2');
+			node2.textContent = pencil;
+		}
+	</script>
 </body>
 </html>
