--- a/QAApp/www/views/RolesView.html
+++ b/QAApp/www/views/RolesView.html
@@ -5,7 +5,8 @@
 	<meta charset="UTF-8">
 </head>
 <body style="height:100%" onload="loadPageData()">
-	<div id="rolesView" style="width:100%; height:100%; margin:0; padding:0; border:solid; background: radial-gradient(at top right, rgba(255, 255, 0, 0.8), #006bff, rgba(3, 47, 167, 0.83), #009970, #148000)">
+	<!-- <div id="rolesView" style="width:100%; height:100%; margin:0; padding:0; border:solid; background: radial-gradient(at top right, rgba(255, 255, 0, 0.8), #006bff, rgba(3, 47, 167, 0.83), #009970, #148000)"> -->
+	<div id="rolesView" style="width:100%; height:100%; margin:0; padding:0; background: white;">
 		<h1 class="role">Manage Roles</h1>
 		<table id="rolesView" class="role">
 			<tr class="role">
@@ -41,7 +42,7 @@
 		text-transform: uppercase;
 		letter-spacing: 2px;
 		font-size: x-large;
-		color: #FFFFFF;/*#6D929B;*/
+		color: #6D929B;
 		text-align:center;
 	}
 	table.role {
