--- a/QAApp/www/Fields.css
+++ b/QAApp/www/Fields.css
@@ -55,3 +55,25 @@
 	/* filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#9e9e9e', endColorstr='#454545'); ie7 */
 	/* -ms-filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#9e9e9e', endColorstr='#454545'); ie8 */
 }
+select.role {
+	background: #fff;
+	padding: 6px 6px 6px 8px;
+	border: solid 1px #bcbbbb;
+	outline: none;
+
+	-webkit-border-radius: 2em;
+	-moz-border-radius: 2em;
+	border-radius: 2em;
+
+	-moz-box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
+	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
+	box-shadow: inset 0 1px 2px rgba(0,0,0,.2);	
+	
+	font-family: sans-serif;
+	font-size: 1.2rem;
+}
+input.role {
+	font-family: sans-serif;
+	font-size: 1.2rem;
+	/*width: 95%;*/
+}
