--- a/QAApp/www/views/RolesView.html
+++ b/QAApp/www/views/RolesView.html
@@ -6,11 +6,19 @@
 	<link rel="StyleSheet" type="text/css" href="../Buttons.css">
 </head>
 <body style="height:100%" onload="loadPageData()">
-	<!-- <div id="rolesView" style="width:100%; height:100%; margin:0; padding:0; border:solid; background: radial-gradient(at top right, rgba(255, 255, 0, 0.8), #006bff, rgba(3, 47, 167, 0.83), #009970, #148000)"> -->
 	<div id="rolesView" style="width:100%; height:100%; margin:0; padding:0; background: white;">
 		<h1 class="role">Manage Responsibilities</h1>
-		<p style="width:90%; text-align:right;"><button class="button bigrounded blue" style="margin:10px 30px 10px 30px" onclick="registerNewPerson()">Register New Person</button></p>
-		<table id="rolesView" class="role">
+		<table style="width:75%; margin:auto">
+			<tr>
+				<td style="width:50%;">
+					<button class="button bigrounded blue" onclick="roleBackToQueue()">Back</button>
+				</td>
+				<td style="width:50%; text-align:right">
+					<button class="button bigrounded blue" onclick="registerNewPerson()">Register New Person</button>
+				</td>
+			</tr>
+		</table>
+		<table class="role">
 			<tr class="role">
 				<th class="role" colspan="3">Person</th>
 				<th class="role" colspan="5">Responsibility</th>
