--- a/BibleAppNW/css/BibleApp.css
+++ b/BibleAppNW/css/BibleApp.css
@@ -452,6 +452,91 @@ body {
     padding-bottom:20px;
     margin:0;
 }
+td {
+	border:solid;
+}
+#settingsTable {
+	width:100%;
+}
+
+/* Font Size Control */
+#fontSizeControl {
+	margin:0;
+	padding:40px;
+}
+#fontSizeSlider {
+	margin-left:auto;
+	margin-right:auto;
+	margin-bottom:0px;
+	border-radius: 7px;
+	background-color:#00008B;
+	width:70%;
+	height:7px;
+}
+#fontSizeThumb {
+	height: 40px;
+	width: 40px;
+	margin-top: -30px;
+	background: #eee;
+	/*padding: 6px;*/
+	border: solid 4px #bcbbbb;
+	outline: none;
+	border-radius: 2em;
+	box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
+	box-shadow: 4px 4px 5px #777;
+}
+#sampleText {
+	background-color: white;
+	color:black;
+}
+
+/* Font Color Control */
+td.tableLeftCol {
+    width:40%;
+    vertical-align:middle;
+    padding-left:10%;
+}
+td.tableCtrlCol {
+    width:20%;
+    vertical-align:middle;
+    text-align:center;
+    margin:auto;
+}
+td.tableRightCol {
+    width:40%;
+    vertical-align:middle;
+    text-align:right;
+    padding-right:10%;   
+}
+#blackBackground {
+	background-color:white;
+	color:black;
+}
+#whiteBackground {
+	background-color:black;
+	color:white;
+}
+#fontColorSlider {
+	background-color:#EEEEEE;
+	height:44px;
+	width:88px;
+	border-radius: 22px;
+	box-shadow: inset 0 0 5px #888;
+	border: solid;
+	border-width:1px;
+	margin:auto;
+}
+#fontColorThumb {
+	height: 34px;
+	width: 34px;
+	z-index:100;
+	background: #eee;
+	border: solid 4px #bcbbbb;
+	border-radius: 2em;
+	box-shadow: 4px 4px 5px #777;
+}
+
+/* VersionsView CSS */
 div.ctry {
     background-color: white;
 	border-radius: 48px;
