--- a/BibleAppNW/css/BibleApp.css
+++ b/BibleAppNW/css/BibleApp.css
@@ -453,21 +453,28 @@ body {
     margin:0;
 }
 td {
-	border:solid;
+	border:none;
 }
 #settingsTable {
 	width:100%;
 }
+#sampleText {
+	background-color: white;
+	color:black;
+	padding: 10px;
+}
+td.rowSpace {
+	padding: 7px;
+}
 
 /* Font Size Control */
 #fontSizeControl {
-	margin:0;
-	padding:40px;
+	padding-top:25px;
+	padding-bottom:10px;
 }
 #fontSizeSlider {
 	margin-left:auto;
 	margin-right:auto;
-	margin-bottom:0px;
 	border-radius: 7px;
 	background-color:#00008B;
 	width:70%;
@@ -476,25 +483,20 @@ td {
 #fontSizeThumb {
 	height: 40px;
 	width: 40px;
+	z-index:100;
 	margin-top: -30px;
 	background: #eee;
-	/*padding: 6px;*/
 	border: solid 4px #bcbbbb;
 	outline: none;
 	border-radius: 2em;
-	box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
 	box-shadow: 4px 4px 5px #777;
-}
-#sampleText {
-	background-color: white;
-	color:black;
 }
 
 /* Font Color Control */
 td.tableLeftCol {
     width:40%;
     vertical-align:middle;
-    padding-left:10%;
+    text-align:center;
 }
 td.tableCtrlCol {
     width:20%;
@@ -505,16 +507,17 @@ td.tableCtrlCol {
 td.tableRightCol {
     width:40%;
     vertical-align:middle;
-    text-align:right;
-    padding-right:10%;   
+    text-align: center;
 }
 #blackBackground {
 	background-color:white;
 	color:black;
+	border-radius: 14px;
 }
 #whiteBackground {
 	background-color:black;
 	color:white;
+	border-radius: 14px;
 }
 #fontColorSlider {
 	background-color:#EEEEEE;
