--- a/BibleAppNW/css/BibleApp.css
+++ b/BibleAppNW/css/BibleApp.css
@@ -353,10 +353,28 @@ p.ansText {
 /**
 * This css files pertains to the SearchView
 */
-
 #searchRoot {
 	margin: 10%;
 	z-index: 30;
+}
+.searchBorder {
+	width:100%;
+	border: solid 1px #d2d2d2;
+	padding: 3px 5px;
+	border-radius: 2em;
+	box-shadow: 0 1px 0px rgba(0,0,0,.1);
+	background: #f1f1f1;
+	background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ededed));
+}
+.searchField {
+	font-family: sans-serif;
+	font-size:1.7rem;
+	background: #fff;
+	padding: 6px 6px 6px 8px;
+	border: solid 1px #bcbbbb;
+	outline: none;
+	border-radius: 2em;
+	box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
 }
 /* Search Results Book Name */
 span.conBook {
@@ -406,11 +424,7 @@ body {
 	width:70%;
 	text-align: center;
 }
-/* Search input field */
-input.searchField {
-	font-family: sans-serif;
-	font-size: 1.2em;
-}
+
 
 
 /**
