--- a/BibleAppNW/css/BibleApp.css
+++ b/BibleAppNW/css/BibleApp.css
@@ -270,13 +270,16 @@ button.historyTabBtn {
 	margin: 0;
 }
 /* Container for one question and answer */
-div.oneQuestion {
-	margin: 4px;
-	border-style: solid;
-	border-width: thin;
-	border-color: #777777;
-	border-radius: 5px;
-	padding: 10px;
+div.oneQuestion {	
+	width:97%;
+	font-family: sans-serif;
+	font-size:1.0rem;
+	background: #fff;
+	padding: 6px 6px 6px 8px;
+	border: solid 1px #bcbbbb;
+	outline: none;
+	border-radius: 0.5em;
+	box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
 }
 /* First line of Question, contains reference and date */
 div.queTop {
@@ -285,6 +288,7 @@ div.queTop {
 p.queRef {
 	margin: 0;
 	float: left;
+	font-weight:'bold';
 }
 /* Question Date */
 p.queDate {
@@ -293,8 +297,9 @@ p.queDate {
 }
 /* Question Text */
 p.queText {
-	margin: 0;
+	margin: 3px;
 	clear: both;
+	font-family: serif;
 }
 /* Line between question and answer */
 hr.ansLine {
@@ -308,6 +313,7 @@ div.ansTop {
 p.ansInstructor {
 	margin: 0;
 	float: left;
+	font-weight:'bold';
 }
 /* Answer Date */
 p.ansDate {
@@ -318,37 +324,38 @@ p.ansDate {
 p.ansText {
 	margin: 0;
 	clear: both;
-}
-/* Div containing question input fields */
-#quesInput {
-	border-style: solid;
-	border-width: thin;
-	border-color: #777777;
-	border-radius: 5px;
-}
-/* Reference input field */
-#inputRef {
-	width: 90%;
-	margin-top: 5%;
-	margin-left: 5%;
-	margin-right: 5%;
-	margin-bottom: 2.5%;
-}
-/* Question input field */
-#inputText {
-	width: 90%;
-	margin-top: 2.5%;
-	margin-left: 5%;
-	margin-right: 5%;
-	margin-bottom: 5%;
+	font-family: serif;
 }
 /* Question submit button */
 #inputBtn {
-	float: right;
-	margin-top: 2.5%;
-	margin-left: 5%;
+	margin-top: 1%;
+	margin-left: 80%;
 	margin-right: 5%;
 	margin-bottom: 5%;
+	background-color: #3684D6;
+	border-radius: 1em;
+}
+.questionBorder {
+	width:100%;
+	margin-top:5px;
+	margin-bottom:5px;
+	border: solid 1px #d2d2d2;
+	padding: 3px 5px;
+	border-radius: 1.0em;
+	box-shadow: 0 1px 0px rgba(0,0,0,.1);
+	background: #f1f1f1;
+	background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ededed));
+}
+.questionField {
+	width:100%;
+	font-family: sans-serif;
+	font-size:1.7rem;
+	background: #fff;
+	padding: 6px 6px 6px 8px;
+	border: solid 1px #bcbbbb;
+	outline: none;
+	border-radius: 0.5em;
+	box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
 }
 /**
 * This css files pertains to the SearchView
