--- a/BibleAppNW/css/BibleApp.css
+++ b/BibleAppNW/css/BibleApp.css
@@ -94,7 +94,7 @@ p.ms1 {
 	color: #2A48B4; /* non-std */
 }
 /* Heading - Section Level 1 */
-p.s1 {
+p.s, p.s1 {
 	font-weight: bold;
 	text-align: center;
 	margin-bottom: 4pt;
@@ -122,6 +122,44 @@ p.d {
 	text-align: center;
 	margin-bottom: 4pt;
 	margin-top: 4pt;
+	color: #2A48B4; /* non-std */
+}
+/* Introduction Major Title */
+p.imt, p.imt1 {
+	font-weight: bold;
+	font-size: 1.16rem;
+	text-align: center;
+	margin-bottom: 4pt;
+	margin-top: 8pt;
+	color: #2A48B4; /* non-std */
+}
+/* Introduction Outline Text Level 1 */
+p.io, p.io1 {
+	text-align: start;
+	margin-left: 0.5in;
+	margin-right: 0.5in; /* non-std included for RTL */
+	color: #555555; /* non-std */
+}
+/* Introduction Outline Text Level 2 */
+p.io2 {
+	text-align: start;
+	margin-left: 0.75in;
+	margin-right: 0.75in; /* non-std included for RTL */
+	color: #555555; /* non-std */
+}
+/* Introduction Prose Paragraph (basic) */
+p.ip {
+	text-align: start;
+	text-indent: 0.125in;
+	color: #555555; /* non-std */
+}
+/* Introduction Section heading, Level 1 */
+p.is, p.is1 {
+	font-weight: bold;
+	font-size: 1.16rem;
+	text-align: center;
+	margin-bottom: 4pt;
+	margin-top: 8pt;
 	color: #2A48B4; /* non-std */
 }
 /* Chapter Number Format */
@@ -173,6 +211,13 @@ p.pi {
 	margin-left: 0.25in;
 	margin-right: 0.25in;
 }
+/* Paragraph Indented Level 1 */
+p.pi, p.pi1 {
+	text-align: start;
+	text-indent: 0.125in;
+	margin-left: 0.25in;
+	margin-right: 0.25in;
+}
 /* Out indented list item */
 p.li {
 	text-indent: -0.375in;
@@ -193,18 +238,11 @@ p.sp {
 	margin-top: 8pt;
 }
 /* Poetry First Line */
-p.q {
+p.q, p.q1 {
 	text-align: start;
 	text-indent: -1.0in;
 	margin-left: 1.25in;
-	margin-top: 0; /* non-std */
-	margin-bottom: 0; /* non-std */
-}
-/* Poetry First Line */
-p.q1 {
-	text-align: start;
-	text-indent: -1.0in;
-	margin-left: 1.25in;
+	margin-right: 1.25in; /* non-std for RTL */
 	margin-top: 0; /* non-std */
 	margin-bottom: 0; /* non-std */
 }
@@ -213,6 +251,7 @@ p.q2 {
 	text-align: start;
 	text-indent: -0.75in;
 	margin-left: 1.25in;
+	margin-right: 1.25in; /* non-std for RTL */
 	margin-top: 0; /* non-std */
 	margin-bottom: 0; /* non-std */
 }
@@ -280,10 +319,9 @@ span.f, span.ft {
 /* verse number embedded in footnote */
 span.fv {
 	text-align: start;
-	/* vertical-align: text-top;
-	font-size: 0.66rem; std
-	CUVSPD and CUVTPD contain 11 \+fv without \fv*.
-	So, including these would cause the entire footnote text to be 0.66rem */
+	vertical-align: text-top;
+	font-size: 0.66rem; 
+	font-family: sans-serif; /* non-std? */
 }
 /* footnote alternate translation */
 span.fqa {
